--- a/Frontend/uitour-app/src/components/Header.css
+++ b/Frontend/uitour-app/src/components/Header.css
@@ -18,10 +18,27 @@
 
 /* Logo */
 .header_logo img {
-  height: 153px;
+  height: 45px;
   width: auto;
   max-width: 100%;
   object-fit: contain;
+}
+
+.header_logoButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  
+  background: transparent;
+  border: none;
+  border-radius: 20%;
+
+  cursor: pointer;
+}
+
+.header_logoButton:hover {
+  background-color: transparent;
 }
 
 /* Search box */
@@ -33,7 +50,7 @@
   gap: 16px;
 
   width: 334px;
-  height: 48px;
+  height: fit-content;
 
   background: #ffffff;
   border: 1px solid #e5e7eb;
@@ -72,17 +89,32 @@
 }
 
 .header_title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   font-family: 'Inter', sans-serif;  
-  
+  padding: 12px 12px 12px 12px;
+
+  width: fit-content;
+  height: fit-content;
   font-size: 14px;
   font-weight: 500;
   color: #000;
+  background-color: transparent;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
 }
 
 .header_globe {
-  width: 32px;
-  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 42px;
+  height: 42px;
   border: none;
+  border-radius: 50%;
   background: transparent;
   font-size: 18px;
   cursor: pointer;
@@ -95,8 +127,8 @@
   gap: 8px;
 
   padding: 8px 8px 8px 16px;
-  width: 88px;
-  height: 48px;
+  width: fit-content;
+  height: fit-content;
 
   background: #ffffff;
   border: 1px solid #e5e7eb;
@@ -104,13 +136,55 @@
 }
 
 .header_menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 42px;
+  height: 42px;
   font-size: 18px;
   color: #111827;
+  background-color: transparent;
+  border: none;
+  border-radius: 50%;
+
+  cursor: pointer;
 }
 
 .header_avatar {
-  width: 32px;
-  height: 32px;
-  background: #f3f4f6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 42px;
+  height: 42px;
+
+
+  overflow: hidden;
+}
+
+.header_avatarButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 42px;
+  height: 42px;
+  background: #e5e7eb;
   border-radius: 50%;
+  border: none;
+
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #f3f4f6;
+}
+
+.header_avatarButton:hover {
+  background-color: #d1d5db;
+}
+
+.header_searchButton:hover {
+  background-color: #00a3c4;
 }
