--- a/Frontend/uitour-app/src/components/Header.css
+++ b/Frontend/uitour-app/src/components/Header.css
@@ -46,6 +46,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-left: 200px;
   padding: 8px 8px 8px 24px;
   gap: 16px;
 
