--- a/Frontend/uitour-app/src/pages/HomeInfo_component/Content.css
+++ b/Frontend/uitour-app/src/pages/HomeInfo_component/Content.css
@@ -60,8 +60,21 @@ body {
 /* Details row */
 .content-details {
   display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 16px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  font-size: 14px;
+  line-height: 20px;
+  color: #000;
+}
+
+.content-detail-item {
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  gap: 8px;
+  gap: 16px;
   font-size: 14px;
   line-height: 20px;
   color: #000;
@@ -132,4 +145,50 @@ body {
 .content-divider {
   width: 100%;
   border-top: 1px solid #E5E7EB;
+}
+
+.content-item-title {
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: #000;
+}
+
+.content-subtitle {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: var(--subtitle-color)
+}
+
+.content-description {
+  margin-top: 24px;
+  margin-bottom: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #000;
+}
+
+.content-button-underline{
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  text-decoration: underline;
+  cursor: pointer;
+  border: none;
+  background: transparent;
+  border-radius: 8px;
+  padding: 12px;
+}
+
+.content-button-underline:hover {
+  background-color: var(--hover-white);
 }
