--- a/Frontend/uitour-app/src/pages/Info_components/InfoHeader.css
+++ b/Frontend/uitour-app/src/pages/Info_components/InfoHeader.css
@@ -63,15 +63,9 @@
 }
 
 .info-header .icon-button {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  background-color: transparent;
-  border-radius: 8px;
   border: none;
-  gap: 6px;
-  height: auto;
-  padding: 8px;
+  box-shadow: none;
+  gap: 0px;
 }
 
 .info-header .icon {
@@ -115,10 +109,4 @@
   height: 20px;
   margin: 0;
   /*background-color: #6B7280; /* block display check*/
-}
-
-.info-header .icon-button:hover {
-  background-color: #F3F4F6;
-  border-radius: 8px;
-  cursor: pointer;
 }
