--- a/Frontend/uitour-app/src/pages/Info_components/InfoHost.css
+++ b/Frontend/uitour-app/src/pages/Info_components/InfoHost.css
@@ -5,7 +5,7 @@
   align-items: flex-start;
   gap: 32px;
   width: 1120px;
-  height: 292px;
+  height: fit-content;
 }
 
 /* ---------- HEADER ---------- */
